<resources>
    <string name="app_name">Pruebitas01</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresar2">Ingresar2</string>
    <string name="todo">TODO</string>
    <string name="suma">Suma</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="par_impar">Par-Impar</string>
    <string name="ra_z_cuadrada">Raíz Cuadrada</string>
    <string name="xd">xd</string>
    <string name="entrar">Entrar</string>
    <string name="regresar">Regresar</string>
    <string name="menu">Menu</string>
    <string name="suma_de_numeros">SUMA DE NUMEROS</string>
</resources>